trying to fix a problem with overflowing content in the sidebar info

--- a/styles.css
+++ b/styles.css
@@ -312,7 +312,7 @@ this is the inner grid that holds the main article and sidebar
 }
 
 .sidebar__item {
-    height:200px;
+    max-height:250px;
     width: 100%;
     background: none;
     margin-top: 1em;
@@ -539,7 +539,7 @@ i:hover {
     }
 
     .sidebar__item {
-        height: 200px;
+        /* height: 200px; */
         width: 200px;
         background:none;
         margin: 0.5em;
@@ -724,7 +724,7 @@ i:hover {
     }
 
     .sidebar__item {
-        height: 200px;
+        /* height: 200px; */
         width: 100%;
         margin: 0.5em;
     }
